; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ethernet/brocade/bna/extr_bnad.c_bnad_uninit.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ethernet/brocade/bna/extr_bnad.c_bnad_uninit.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bnad = type { i64, i32* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.bnad*)* @bnad_uninit to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @bnad_uninit(%struct.bnad* %0) #0 {
  %2 = alloca %struct.bnad*, align 8
  store %struct.bnad* %0, %struct.bnad** %2, align 8
  %3 = load %struct.bnad*, %struct.bnad** %2, align 8
  %4 = getelementptr inbounds %struct.bnad, %struct.bnad* %3, i32 0, i32 1
  %5 = load i32*, i32** %4, align 8
  %6 = icmp ne i32* %5, null
  br i1 %6, label %7, label %18

7:                                                ; preds = %1
  %8 = load %struct.bnad*, %struct.bnad** %2, align 8
  %9 = getelementptr inbounds %struct.bnad, %struct.bnad* %8, i32 0, i32 1
  %10 = load i32*, i32** %9, align 8
  %11 = call i32 @flush_workqueue(i32* %10)
  %12 = load %struct.bnad*, %struct.bnad** %2, align 8
  %13 = getelementptr inbounds %struct.bnad, %struct.bnad* %12, i32 0, i32 1
  %14 = load i32*, i32** %13, align 8
  %15 = call i32 @destroy_workqueue(i32* %14)
  %16 = load %struct.bnad*, %struct.bnad** %2, align 8
  %17 = getelementptr inbounds %struct.bnad, %struct.bnad* %16, i32 0, i32 1
  store i32* null, i32** %17, align 8
  br label %18

18:                                               ; preds = %7, %1
  %19 = load %struct.bnad*, %struct.bnad** %2, align 8
  %20 = getelementptr inbounds %struct.bnad, %struct.bnad* %19, i32 0, i32 0
  %21 = load i64, i64* %20, align 8
  %22 = icmp ne i64 %21, 0
  br i1 %22, label %23, label %28

23:                                               ; preds = %18
  %24 = load %struct.bnad*, %struct.bnad** %2, align 8
  %25 = getelementptr inbounds %struct.bnad, %struct.bnad* %24, i32 0, i32 0
  %26 = load i64, i64* %25, align 8
  %27 = call i32 @iounmap(i64 %26)
  br label %28

28:                                               ; preds = %23, %18
  ret void
}

declare dso_local i32 @flush_workqueue(i32*) #1

declare dso_local i32 @destroy_workqueue(i32*) #1

declare dso_local i32 @iounmap(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
